5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1723_2508.log
== TEST (2019-05-12 09:47:28) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = 3 + 4/k
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:47:48) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = 3 + 4/k
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:54:42) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:54:47) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:54:51) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:55:04) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:55:11) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:55:15) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:55:27) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)

print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:55:33) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:55:35) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
i = n-1

while(n<=i):
	x = (-1**i) * (3 + 4/k)
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 09:59:38) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 

while(n<=i):
	soma = soma + (-1**i) * (3 + 4/k)
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(n<=i):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:00:08) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0

while(n<=i):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(n<=i):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:00:16) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0

while(n<=i):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:00:24) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0

while(n<=i):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:13:38) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0

while(n<=i):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:15:43) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0

while(n<=i):
	soma = soma + 3 + (-1**i) * (3 + 4/k)
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:01:19) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0

while(n<=i):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:49:14) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0
fim = n
while(n<fim):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:49:27) 
-- CODE:
n = int(input("Numero de vezes:"))

k = (2+n)*(3+n)*(4+n)
soma = 0 
i = 0
fim = n
while(n<fim):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:51:11) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n
while(n<fim):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	j = j+2
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:51:30) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<fim):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	j = j+2
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:51:42) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<5):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	j = j+2
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:53:33) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<5):
	soma = soma + (-1**i) * (3 + 4/k)
	i = i+1
	j = j+2
	n = n+1
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:57:51) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<5):
	soma = soma + ((-1)**i) * (3 + 4/k)
	i = i+1
	j = j+2
	n = n+1
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:58:03) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<5):
	soma = soma + ((-1)**i) * (3 + 4/k)
	i = i+1
	j = j+2
	n = n+1
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:58:09) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<5):
	soma = soma + ((-1)**i) * (3 + 4/k)
	i = i+1
	j = j+2
	n = n+1
	print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x, 8))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:58:14) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<6):
	soma = soma + ((-1)**i) * (3 + 4/k)
	i = i+1
	j = j+2
	n = n+1
	print(round(soma, 8))
-- OUTPUT:
-3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 20:58:34) 
-- CODE:
n = int(input("Numero de vezes:"))

j = 0
k = (2+j)*(3+j)*(4+j)
soma = 0 
i = 1
fim = n-1
while(n<6):
	soma = soma + ((-1)**i) * (3 + 4/k)
	i = i+1
	j = j+2
	n = n+1
	print(round(soma, 8))
-- OUTPUT:
-3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:09:31) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	
	
-- OUTPUT:
-3.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:09:47) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
0.16666667
0.13333333
0.1452381
0.13968254
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:10:03) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:10:14) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(pi, 8))
	
	
-- OUTPUT:
3
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:10:25) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
print(round(pi, 8))
	
	
-- EXECUTION TIME:
0.153229
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:56:27) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
print(round(s, 8))
	
	
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:00:30) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(E, 8))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(E, 8))
NameError: name 'E' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:00:35) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(e, 8))
	
	
-- OUTPUT:
3
4
5
6
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:00:46) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
0.16666667
0.13333333
0.1452381
0.13968254
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:00:57) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(soma, 8))
	
	
-- OUTPUT:
0.16666667
0.13333333
0.1452381
0.13968254
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:01:04) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
	print(round(pi, 8))
	
	
-- EXECUTION TIME:
0.2543
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
3.14162381
3.14156573
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:01:07) 
-- CODE:
n = int(input("Numero de vezes:"))

x = 2
y = 3
z = 4
cont = 0
soma = 0
s = 0
e = 2
while(cont<n):
	pi = 3 + soma
	soma = soma + 4 / (((x+s)*(y+s)*(z+s))* ((-1)**e))
	e = e + 1
	s = s+2
	cont = cont + 1
print(round(pi, 8))
	
	
-- EXECUTION TIME:
0.160566
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
